crates/tui/tests/storybook/snapshots/app_dialog_command__diff_overlay_refresh.stale.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


   ┌ files ──────────────────────────┬─ changes - stale - r refresh ────────────────────────────┐
   │ unstaged (1) +1 -1              │       M  parser.rs  unstaged +1 -1                       │
   │ M parser.rs +1 -1               │       @@ -1 +1 @@                                        │
   │                                 │ 1     - let strict = false;                              │
   │ staged (0)                      │    1  + let strict = true;                               │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
   │                                 │                                                          │
  e│                                 │                                                          │
───│                                 │                                                          │───
   └─────────────────────────────────┴──────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                                    2:1 33%
