crates/tui/tests/storybook/snapshots/app_dialog_command__ps_dialog_list_and_details_wrap_command.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---








─ ps ─────────────────────────────────────────────────────────────────
 filter jobs…
   proc_123       2m 05s  ls -ld /Users/leo/.dotfiles; realpath /Use…










 ○ normal                                                     1:1 100%
