crates/tui/tests/storybook/snapshots/app_dialog_command__rewind_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 16
  0   0  59 fg=AnsiValue(244) bg=AnsiValue(234) attrs=bold
  0  59   1 bg=AnsiValue(235)
  1   0  59 bg=AnsiValue(236)
  1  59   1 bg=AnsiValue(243)
  2  59   1 bg=AnsiValue(243)
  3   0  50 bg=AnsiValue(236)
  3  50   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  3  58   1 bg=AnsiValue(236)
  3  59   1 bg=AnsiValue(243)
  4   0   1 bg=AnsiValue(236)
  4   1  16 bg=AnsiValue(236) attrs=bold
  4  17  42 bg=AnsiValue(236)
  4  59   1 bg=AnsiValue(243)
  5   0  59 bg=AnsiValue(236)
  5  59   1 bg=AnsiValue(243)
  6  59   1 bg=AnsiValue(243)
  7   0  50 bg=AnsiValue(236)
  7  50   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  7  58   1 bg=AnsiValue(236)
  7  59   1 bg=AnsiValue(243)
  8   0   1 bg=AnsiValue(236)
  8   1  20 bg=AnsiValue(236) attrs=bold
  8  21  38 bg=AnsiValue(236)
  8  59   1 bg=AnsiValue(243)
  9   0  59 bg=AnsiValue(236)
  9  59   1 bg=AnsiValue(243)
 10   0   2 fg=AnsiValue(208)
 10   2   6 fg=AnsiValue(208) attrs=dim
 10   8  52 fg=AnsiValue(208)
 11   1   4 attrs=dim
 12   1   4 attrs=dim
 13   1   4 attrs=dim
 14   0   1 bg=AnsiValue(237)
 14   1   1 fg=Black bg=White
 14   2   3 bg=AnsiValue(237) attrs=dim
 14   5   9 fg=AnsiValue(208) bg=AnsiValue(237)
 14  14  46 bg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  42 bg=AnsiValue(233)
 15  52   8 fg=AnsiValue(244) bg=AnsiValue(233)
